--- a/starter_project/package.json
+++ b/starter_project/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.8",
     "clean-webpack-plugin": "^4.0.0",
     "cors": "^2.8.5",
     "css-loader": "^6.10.0",
